FixedHeaderTable's styling seems to work for all three tables after rerender
For some reason heading table is misaligned at initial render,
but corrects itself on subsequent renders. Stub table is aligned
from the get go.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -40,7 +40,9 @@ for Pure menus
 
 .pure-table-bordered tbody th {
     text-align: left;
+    background-color: #e0e0e0;
 }
+
 /*
 Pure menus end
 */
